--- a/BlogProject/templates/blog/base.html
+++ b/BlogProject/templates/blog/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Black &amp; White</title>
+    <title> Ruifeng's Blog </title>
 
     <!-- meta -->
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="index.html"><b>Black</b> &amp; White</a></h1>
+                    <h1><a href="index.html"><b> Ruifeng's Blog </b></a></h1>
                 </div>
             </div><!-- col-md-4 -->
             <div class="col-md-8 col-sm-7 col-xs-4">
@@ -40,10 +40,10 @@
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="cl-effect-11"><a href="index.html" data-hover="首页">首页</a></li>
-                            <li class="cl-effect-11"><a href="full-width.html" data-hover="博客">博客</a></li>
-                            <li class="cl-effect-11"><a href="about.html" data-hover="关于">关于</a></li>
-                            <li class="cl-effect-11"><a href="contact.html" data-hover="联系">联系</a></li>
+                            <li class="cl-effect-11"><a href="index.html" data-hover="Home"><b> Home </b></a></li>
+                            <li class="cl-effect-11"><a href="full-width.html" data-hover="Blog"><b> Blog </b></a></li>
+                            <li class="cl-effect-11"><a href="about.html" data-hover="About"><b> About </b></a></li>
+                            <li class="cl-effect-11"><a href="contact.html" data-hover="Contact"><b> Contact </b></a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </nav>
@@ -51,7 +51,7 @@
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
                         <form role="search" method="get" id="searchform" action="#">
-                            <input type="search" placeholder="搜索" required>
+                            <input type="search" placeholder="Search" required>
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
                     </div>
@@ -60,8 +60,6 @@
         </div>
     </header>
 </div>
-<div class="copyrights">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div>
-<div class="copyrights">Modified by <a href="http://zmrenwu.com/">追梦人物的博客</a></div>
 
 <div class="content-body">
     <div class="container">
@@ -74,7 +72,7 @@
                 {% block toc %}
                 {% endblock toc %}
                 <div class="widget widget-recent-posts">
-                    <h3 class="widget-title">最新文章</h3>
+                    <h3 class="widget-title"><b> Recent Post </b></h3>
                     <ul>
                         <li>
                             <a href="#">Django 博客开发入门教程：前言</a>
@@ -88,7 +86,7 @@
                     </ul>
                 </div>
                 <div class="widget widget-archives">
-                    <h3 class="widget-title">归档</h3>
+                    <h3 class="widget-title">Time Lines</h3>
                     <ul>
                         <li>
                             <a href="#">2017 年 5 月</a>
@@ -103,7 +101,7 @@
                 </div>
 
                 <div class="widget widget-category">
-                    <h3 class="widget-title">分类</h3>
+                    <h3 class="widget-title">Categories</h3>
                     <ul>
                         <li>
                             <a href="#">Django 博客教程 <span class="post-count">(13)</span></a>
@@ -118,7 +116,7 @@
                 </div>
 
                 <div class="widget widget-tag-cloud">
-                    <h3 class="widget-title">标签云</h3>
+                    <h3 class="widget-title">Tags</h3>
                     <ul>
                         <li>
                             <a href="#">Django</a>
@@ -163,9 +161,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p class="copyright">&copy 2017 - 采集自<a href="http://www.cssmoban.com/"
-                                                        target="_blank" title="模板之家">模板之家</a>
-                    - 由<a href="http://zmrenwu.com/" title="网页模板" target="_blank">追梦人物的博客</a>修改
+                <pb class="copyright"> &copy 2019 - Present <a href="https://github.com/AlgoIsBeautiful"
+                                                        target="_blank" title="AlgoIsBeautiful"> Algorithm is Beautiful </a>
+                    - <a href="#" title="" target="_blank">by Ruifeng Wang</a>
                 </p>
             </div>
         </div>
@@ -177,10 +175,10 @@
     <button type="button" class="overlay-close"><span class="ion-ios-close-empty"></span></button>
     <nav>
         <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="full-width.html">博客</a></li>
-            <li><a href="about.html">关于</a></li>
-            <li><a href="contact.html">联系</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="full-width.html">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </div>
