--- a/BlogProject/templates/blog/detail.html
+++ b/BlogProject/templates/blog/detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block main %}
     <article class="post post-{{ post.pk }}">
@@ -24,12 +24,12 @@
             {% csrf_token %}
             <div class="row">
                 <div class="col-md-4">
-                    <label for="{{ form.name.id_for_label }}">名字：</label>
+                    <label for="{{ form.name.id_for_label }}">Name:</label>
                     {{ form.name }}
                     {{ form.name.errors }}
                 </div>
                 <div class="col-md-4">
-                    <label for="{{ form.email.id_for_label }}">邮箱：</label>
+                    <label for="{{ form.email.id_for_label }}">Email:</label>
                     {{ form.email }}
                     {{ form.email.errors }}
                 </div>
@@ -39,23 +39,23 @@
                     {{ form.url.errors }}
                 </div>
                 <div class="col-md-12">
-                    <label for="{{ form.text.id_for_label }}">评论：</label>
+                    <label for="{{ form.text.id_for_label }}">Comment</label>
                     {{ form.text }}
                     {{ form.text.errors }}
-                    <button type="submit" class="comment-btn">发表</button>
+                    <button type="submit" class="comment-btn">Submit</button>
                 </div>
             </div>    <!-- row -->
         </form>
         <div class="comment-list-panel">
-            <h3>{{ comment_list.count }} Comments </h3>
+            <h3>评论，共 <span>4</span> 条</h3>
             <ul class="comment-list list-unstyled">
-                {% for com in comment_list %}
+                {% for comment in comment_list %}
                     <li class="comment-item">
-                        <span class="nickname">{{ com.name }}</span>
+                        <span class="nickname">{{ comment.name }}</span>
                         <time class="submit-date"
-                              datetime="{{ comment.created_time }}">{{ com.created_time }}</time>
+                              datetime="{{ comment.created_time }}">{{ comment.created_time }}</time>
                         <div class="text">
-                            <p>{{ com.text }}</p>
+                            {{ com.text }}
                         </div>
                     </li>
                 {% empty %}
